--- a/index.html
+++ b/index.html
@@ -1,64 +1,124 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mahin Rahman</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container">
-    <aside class="sidebar">
-      <img src="profile.jpg" alt="Mahin Rahman" class="profile-pic">
-      <h1>Mahin Rahman</h1>
-      <p>Computer Science Student</p>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#social">Social</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </aside>
+/* style.css - Exact Tania Rascia Layout */
 
-    <main class="content">
-      <section id="about">
-        <h2>About Me</h2>
-        <p>I am Mahin Rahman, a student of Computer Science and Technology at Headway Engineering Institute, Sylhet. I love learning new technologies and building my own digital identity. I designed and built my own personal information site.</p>
-      </section>
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #fff;
+  color: #222;
+  line-height: 1.6;
+}
 
-      <section id="education">
-        <h2>Education</h2>
-        <p><strong>Institute:</strong> Headway Engineering Institute, Sylhet</p>
-        <p><strong>Department:</strong> Computer Science & Technology</p>
-        <p><strong>Status:</strong> Diploma (Ongoing)</p>
-      </section>
+.container {
+  display: flex;
+  min-height: 100vh;
+}
 
-      <section id="social">
-        <h2>Social Media</h2>
-        <ul>
-          <li><a href="https://www.facebook.com/share/167HMiKwGM/" target="_blank">Facebook</a></li>
-          <li><a href="https://www.instagram.com/mahin0o0/profilecard/?igsh=MWI0ZXk1ejJjaTM2bw==" target="_blank">Instagram</a></li>
-          <li><a href="https://www.tiktok.com/@mahin0o0?_t=ZS-8w4GhTuUH4c&_r=1" target="_blank">TikTok</a></li>
-          <li><a href="https://www.threads.net/@mahin0o0" target="_blank">Threads</a></li>
-          <li><a href="https://www.youtube.com/@Mahin.0o0" target="_blank">YouTube</a></li>
-          <li><a href="https://wa.me/8801770756964" target="_blank">WhatsApp</a></li>
-          <li><a href="mailto:mahinrahman13140@gmail.com">Email</a></li>
-          <li><a href="https://github.com/mahin0o0" target="_blank">GitHub</a></li>
-        </ul>
-      </section>
+/* Sidebar */
+.sidebar {
+  width: 280px;
+  padding: 40px;
+  background: #f9f9f9;
+  border-right: 1px solid #eaeaea;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
+}
 
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:mahinrahman13140@gmail.com">mahinrahman13140@gmail.com</a></p>
-        <p>Phone: <a href="tel:+8801770756964">+8801770756964</a></p>
-      </section>
+.profile-pic {
+  width: 100%;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
 
-      <footer>
-        <p>&copy; 2025 Mahin Rahman. All rights reserved.</p>
-      </footer>
-    </main>
-  </div>
-</body>
-</html>
+.sidebar h1 {
+  margin-top: 0;
+  font-size: 28px;
+}
+
+.sidebar p {
+  font-size: 14px;
+  color: #555;
+}
+
+.sidebar nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.sidebar nav ul li {
+  margin-bottom: 10px;
+}
+
+.sidebar nav ul li a {
+  color: #007acc;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.sidebar nav ul li a:hover {
+  text-decoration: underline;
+}
+
+/* Content Area */
+.content {
+  margin-left: 280px;
+  padding: 40px;
+  max-width: 800px;
+  width: 100%;
+}
+
+.content h2 {
+  font-size: 22px;
+  margin-top: 40px;
+}
+
+.content p,
+.content li {
+  font-size: 16px;
+  color: #333;
+}
+
+.content ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.content ul li a {
+  color: #007acc;
+  text-decoration: none;
+}
+
+.content ul li a:hover {
+  text-decoration: underline;
+}
+
+footer {
+  margin-top: 60px;
+  padding-top: 20px;
+  border-top: 1px solid #eaeaea;
+  font-size: 14px;
+  color: #999;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    position: relative;
+    border-right: none;
+    border-bottom: 1px solid #eaeaea;
+  }
+
+  .content {
+    margin-left: 0;
+    padding: 20px;
+  }
+}
